examples/test/testpolicy882.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy882
  namespace: namespace293
spec:
  podSelector:
    matchLabels:
      key21: value4
      key44: value17
      key17: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value16
      podSelector:
        matchLabels:
          key22: value24
